# ComfyUI-TIDE

./: .gitignore  README.md  __init__.py  nodes.py  nodes_sdxl.py  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md
tests/: test_attention_patch.py  test_math.py  test_wan.py
tide_core/: __init__.py  config.py  math.py  patches.py  wan.py
